syntax = "proto3";
import "tcp-conn.proto";

package pb;

message User {
    string  username = 1;       // 用户名，唯一
    string  nickname = 2;       // 昵称
    string  password = 3;       // 密码
    string  avatar_url = 4;     // 头像地址
    int32   sex = 5;            // 性别
    int64   birthday = 6;       // 生日
    string  phone_num = 7;      // 手机号
    int64   create_time = 8;    // 创建时间
    int64   update_time = 9;   // 更新时间
}

message RegisterReq {
    User user = 1;
}

message RegisterResp {
}

message AddFriendReq {
    string user_id = 1;      // 用户id
    string friend_id = 2;    // 好友id
}

message AddFriendResp {
}

message GetUserReq {
    string username = 1;
}

message GetUserResp {
    User user = 1;
}

message ListUsersReq {
    string username = 1;  // 用户id
}

message ListUsersResp {
    repeated User users = 1;
}

message SendMessageReq {
    MessageItem item = 1;
}

message SendMessageResp {
}

message DelFriendReq {
    string username = 1;      // 用户id
    string friend_name = 2;    // 好友id
}

message DelFriendResp {
}

message UpdateProfileReq {
    User user = 1;
}

message UpdateProfileResp {
}

message ChangePasswordReq {
    string username     = 1;
    string pre_password = 2;
    string password     = 3;
}

message ChangePasswordResp {
}

message Group {
    uint64 group_id     = 1;
    string group_name   = 2;
    string create_user  = 3;
    string owner        = 4;
    string announcement = 5;
    int32  user_num     = 6;
}

message CreateGroupReq {
    Group group = 1;
}

message CreateGroupResp {
    uint64 group_id = 1;
}

message DisbandGroupReq {
    uint64 group_id = 1;
}

message DisbandGroupResp {
}

message AddGroupMemberReq {
    uint64 group_id = 1;
    string username = 2;
}

message AddGroupMemberResp {
}

message DelGroupMemberReq {
    uint64 group_id = 1;
    string username = 2;
}

message DelGroupMemberResp{
}

service CliInterfaceService {
    // Register 用户注册
    rpc Register(RegisterReq) returns(RegisterResp);
    // AddFriend 添加好友
    rpc AddFriend(AddFriendReq) returns(AddFriendResp);
    // GetFriend 获取指定好友详细信息
    rpc GetFriend(GetUserReq) returns(GetUserResp);
    // ListFriends 列出指定用户的所有好友
    rpc ListFriends(ListUsersReq) returns(ListUsersResp);
    // SendMessage 发送消息给好友
    rpc SendMessage(SendMessageReq) returns(SendMessageResp);
    // DelFriend 删除指定好友
    rpc DelFriend(DelFriendReq) returns(DelFriendResp);
    // UpdateProfile 更新个人信息
    rpc UpdateProfile(UpdateProfileReq) returns(UpdateProfileResp);
    // ChangePassword 更换密码
    rpc ChangePassword(ChangePasswordReq) returns(ChangePasswordResp);
    // 创建群组
    rpc CreateGroup(CreateGroupReq) returns(CreateGroupResp);
    // 解散群组
    rpc DeleteGroup(DisbandGroupReq) returns(DisbandGroupResp);
    // 用户加入群组
    rpc AddGroupMember(AddGroupMemberReq) returns(AddGroupMemberResp);
    // 用户退出群组
    rpc DelGroupMember(DelGroupMemberReq) returns(DelGroupMemberResp);
}